<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EmiActivity">

    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/principle_amount"
                android:layout_marginStart="5dp"/>
            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789."
                android:inputType="number"
                android:singleLine="true"
                tools:ignore="Autofill" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate"
                android:layout_marginStart="5dp"/>
            <EditText
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789."
                android:inputType="number"
                android:singleLine="true"
                tools:ignore="Autofill" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_many_years"
                android:layout_marginStart="5dp"/>
            <EditText
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789."
                android:inputType="number"
                tools:ignore="Autofill" />
            </LinearLayout>
            <Button
                android:id="@+id/calculate"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:text="@string/calculate"
                android:textStyle="bold"
                android:background="@color/lightdarkgreen"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emi"
                android:layout_marginStart="5dp"/>
            <EditText
                android:id="@+id/emiResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:ignore="Autofill" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalAmount_with_Interest"
                android:layout_marginStart="5dp"/>
            <EditText
                android:id="@+id/totalAmountWithInterest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>