<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeActivity">
    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true">
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/enterYourIncome"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:labelFor="@id/amountEditText"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        tools:ignore="Autofill"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignTop="@+id/linearLayout1"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:fontFamily="monospace"
        android:textAlignment="viewStart"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:fontFamily="monospace"
        android:textAlignment="viewStart"
        android:layout_margin="10dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/calculate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/lightdarkgreen"
        android:layout_margin="20dp"/>
</RelativeLayout>